# work

./: .gitignore  readme.md  tags
calibration/: CMakeLists.txt  jpg2png  jpg2png.cpp  readme
datasets/imagenet/: imagenet_accuracy.txt  imagenet_performance.txt
lenet/: compiler.cmake  mnist.onnx  mnist.yaml
mnist/: builder.mk  compiler.mk  main.cpp  readme.md
models/lenet/: builder.mk  compiler.mk  lenet.onnx  linker.mk  main.cpp  profiler.mk  readme.md
models/lenet_nmp/: extract.mk  mnist.cpp  readme.md
models/mnist/: compiler.mk  readme.md
models/mobilenet/: builder.mk  compiler.mk  main.cpp  readme.md
models/resnet18/: builder.mk  compiler.mk  main.cpp  readme.md
models/squeezenet/: builder.mk  compiler.mk  main.cpp  readme.md
resnet18/: builder.cmake  compiler.cmake  compiler.mk  extract.cmake  linker.cmake  main.cpp  profiler.cmake  readme.md  resnet18.cpp  resnet18.yaml
resnet18/bundle/: readme
scripts/: exec_accuracy.sh  ground_truth_imagenet.txt  ground_truth_mnist.txt  measure_acc.cpp  measure_mnist.cpp  readme.md
